# email-send-mcp

./: .dockerignore  .env  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  EMAIL_PROVIDERS.md  LICENSE  QUICKSTART.md  README.md  examples.py  main.py  pyproject.toml  test_kakao_specific.py  test_smtp.py  test_smtp_variations.py
.github/workflows/: build.yml  ci.yml  deploy.yml  deploy_green.yml  promote_green.yml  rollback-blue.yml
.github/workflows/templates/: config.yaml.j2
src/: __init__.py  config.py  server.py
src/services/: __init__.py  email_receiver.py  email_sender.py
src/utils/: __init__.py  validators.py
tests/: test_config.py  test_validators.py
